unpackaged/main/default/objects/CV_Prix_Degressif__mdt/CV_Prix_Degressif__mdt.object-meta.xml
<CustomObject>
    <label>CV_Prix_Degressif</label>
    <pluralLabel>CV_Prix_Degressifs</pluralLabel>
</CustomObject>