unpackaged/main/default/objects/CV_Prix_Degressif__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>en Euro</description>
    <label>Discount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>